Board Game Review Prediction complete

--- a/WarmupProject.ipynb
+++ b/WarmupProject.ipynb
@@ -185,16 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9fbc0a06-308c-41ff-83c5-5386a7c89884",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gym version: 0.26.2\n",
-      "NumPy version: 2.3.1\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gym'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgym\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mGym version:\u001b[39m\u001b[33m\"\u001b[39m, gym.__version__)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'gym'"
      ]
     }
    ],
@@ -208,8 +211,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3792ff30-aa97-48a7-a600-b9188ab230bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gym'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgym\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Create the environment with modern render mode\u001b[39;00m\n\u001b[32m      4\u001b[39m env = gym.make(\u001b[33m'\u001b[39m\u001b[33mCartPole-v1\u001b[39m\u001b[33m'\u001b[39m, render_mode=\u001b[33m\"\u001b[39m\u001b[33mhuman\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'gym'"
+     ]
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "\n",
+    "# Create the environment with modern render mode\n",
+    "env = gym.make('CartPole-v1', render_mode=\"human\")\n",
+    "\n",
+    "for i_episode in range(20):\n",
+    "    observation, info = env.reset()  # New API: reset returns (obs, info)\n",
+    "    \n",
+    "    for t in range(100):\n",
+    "        env.render()\n",
+    "        print(observation)\n",
+    "        \n",
+    "        action = env.action_space.sample()\n",
+    "        \n",
+    "        # New API: step returns 5 values\n",
+    "        observation, reward, terminated, truncated, info = env.step(action)\n",
+    "        \n",
+    "        if terminated or truncated:\n",
+    "            print(f\"Episode finished after {t+1} timesteps\")\n",
+    "            break\n",
+    "\n",
+    "# Print env specs\n",
+    "print(\"\\nAction space:\", env.action_space)\n",
+    "print(\"Observation space:\", env.observation_space)\n",
+    "print(\"Observation high:\", env.observation_space.high)\n",
+    "print(\"Observation low:\", env.observation_space.low)\n",
+    "\n",
+    "env.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8435e2d9-0985-4de3-a8ff-faa295c59a40",
    "metadata": {},
    "outputs": [],
    "source": []
