--- a/CreditCardFraudDetection.ipynb
+++ b/CreditCardFraudDetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f64130b4-e68b-4c22-86df-4188421fc894",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "b5169d7f-3d6e-4f86-8c02-19005b6e3319",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "0c09a6b6-aa05-40a8-848f-c11a523bc28e",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "a6f6a22e-20a0-4af9-b269-6c099708cd4d",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "2f2421f0-918a-4b64-834e-3fcbadbd74aa",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "1443f17c-d436-4758-8b45-823574c79979",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "63b46d0a-5d47-4436-a121-62c2a067f79b",
    "metadata": {},
    "outputs": [
@@ -231,8 +231,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "438b825b-bfab-40f8-93fe-2ee7c19664b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.neighbors import LocalOutlierFactor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ea969c5a-70a8-48eb-a233-f4318ac4bebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define random states\n",
+    "state = 1\n",
+    "\n",
+    "# define outlier detection tools to be compared - dictionary of the 2 classifier methods to be compared\n",
+    "classifiers = {\n",
+    "    \"Isolation Forest\": IsolationForest(max_samples=len(X),\n",
+    "                                        contamination=outlier_fraction,\n",
+    "                                        random_state=state),\n",
+    "    \"Local Outlier Factor\": LocalOutlierFactor(\n",
+    "        n_neighbors=20,\n",
+    "        contamination=outlier_fraction)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8e51d5dd-7134-4e6c-9b33-fd05edb74203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isolation Forest: 71\n",
+      "0.99750711000316\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     28432\n",
+      "           1       0.28      0.29      0.28        49\n",
+      "\n",
+      "    accuracy                           1.00     28481\n",
+      "   macro avg       0.64      0.64      0.64     28481\n",
+      "weighted avg       1.00      1.00      1.00     28481\n",
+      "\n",
+      "Local Outlier Factor: 97\n",
+      "0.9965942207085425\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     28432\n",
+      "           1       0.02      0.02      0.02        49\n",
+      "\n",
+      "    accuracy                           1.00     28481\n",
+      "   macro avg       0.51      0.51      0.51     28481\n",
+      "weighted avg       1.00      1.00      1.00     28481\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 900x700 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Fit the model\n",
+    "plt.figure(figsize=(9, 7))\n",
+    "n_outliers = len(Fraud)\n",
+    "\n",
+    "\n",
+    "for i, (clf_name, clf) in enumerate(classifiers.items()):\n",
+    "    \n",
+    "    # fit the data and tag outliers\n",
+    "    if clf_name == \"Local Outlier Factor\":\n",
+    "        y_pred = clf.fit_predict(X)\n",
+    "        scores_pred = clf.negative_outlier_factor_\n",
+    "    else:\n",
+    "        clf.fit(X)\n",
+    "        scores_pred = clf.decision_function(X)\n",
+    "        y_pred = clf.predict(X)\n",
+    "    \n",
+    "    # Reshape the prediction values to 0 for valid, 1 for fraud. \n",
+    "    y_pred[y_pred == 1] = 0\n",
+    "    y_pred[y_pred == -1] = 1\n",
+    "    \n",
+    "    n_errors = (y_pred != Y).sum()\n",
+    "    \n",
+    "    # Run classification metrics\n",
+    "    print('{}: {}'.format(clf_name, n_errors))\n",
+    "    print(accuracy_score(Y, y_pred))\n",
+    "    print(classification_report(Y, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2506f26-ce0a-4beb-94af-c80629c6ae0a",
    "metadata": {},
    "outputs": [],
    "source": []
